2009-10-05  Jaroslav Hajek  <highegg@gmail.com>

	* pt-misc.cc (tree_argument_list::convert_to_const_vector):
	Return more than nargout arguments only unless undefined elements
	occur.
	* ov-class.cc (octave_class::subsref): Pack return list from
	overloaded method into first value.

2009-10-05  Jaroslav Hajek  <highegg@gmail.com>

	* ov-ch-mat.h (octave_char_matrix): Don't declare allocator and
	typeid.
	* ov-ch-mat.cc: Don't define them.
	* ov.cc (install_types): Don't register octave_char_matrix.

2009-10-05  John W. Eaton  <jwe@octave.org>

	* ov.h (octave_value (const charMatrix&, char, bool),
	octave_value (const charNDArray&, char, bool),
	octave_value (const ArrayN<char>&, char, bool)):
	New constructor decls.
	(octave_value (const charMatrix&, bool, char),
	octave_value (const charNDArray&, bool, char),
	octave_value (const ArrayN<char>&, bool, char)): Mark with
	GCC_ATTR_DEPRECATED.  Single-quoted strings are now default string
	type.
	(octave_value::convert_to_str): Default is single-quoted strings.
	* ov.cc (octave_value (const charMatrix&, char, bool),
	octave_value (const charNDArray&, char, bool),
	octave_value (const ArrayN<char>&, char, bool)): New constructors.
	(octave_value (const charMatrix&, bool, char),
	octave_value (const charNDArray&, bool, char),
	octave_value (const ArrayN<char>&, bool, char)):
	Assume is_string argument is always true.

	* ov-re-mat.cc (octave_sparse_matrix::convert_to_str_internal):
	Update for octave_value constructore changes.
	* ov-ch-mat.h (octave_char_matrix::convert_to_str_internal): Likewise.
	* ov-re-sparse.cc (octave_sparse_matrix::convert_to_str_internal):
	Likewise.
	* ov-str-mat.h (octave_char_matrix_str::squeeze,
	octave_char_matrix_str::reshape, octave_char_matrix_str::permute,
	octave_char_matrix_str::diag, octave_char_matrix_str::sort,
	octave_char_matrix_sq_str::squeeze,
	octave_char_matrix_sq_str::reshape,
	octave_char_matrix_sq_str::permute,